# hipfire

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEFERRED.md  MANUAL_REVIEW.md  OVERNIGHT_LOG.md  OVERNIGHT_PLAN.md  PFLASH_CONTRACT.md  PFLASH_LOG.md  README.md  SESSION_SUMMARY.md  results.tsv
.githooks/: pre-commit
.skills/hipfire-arch-port/: SKILL.md  contributor-onboarding.md  playbook.md  validation.md
.skills/rebase-onto-modular/: SKILL.md
bench/results/: isa-analysis.txt
benchmarks/quality-baselines/: README.md
benchmarks/results/: devlog_20260510_mq3_batch_fanout_gfx1151.md
cli/: bench_vs_ollama.ts  chat.ts  chat_pure.test.ts  chat_pure.ts  index.ts  registry.json
crates/engine/: Cargo.toml
crates/hipfire-arch-qwen35/: Cargo.toml
crates/hipfire-arch-qwen35/examples/: test_qwen35_load_multi.rs  test_qwen35_state_multi.rs
crates/hipfire-arch-qwen35/src/: qwen35.rs  speculative.rs
crates/hipfire-arch-qwen35/tests/: pp_parity.rs
crates/hipfire-runtime/: Cargo.toml
crates/hipfire-runtime/examples/: a3b_paged_smoke.rs  build_kld_ref.rs  daemon.rs  dense_paged_smoke.rs  dmabuf_probe.rs  eval_gguf.rs  eval_hipfire.rs  gpus_smoke.rs  perplexity.rs  pp2_vram_probe.rs  pp_parity.rs  pp_parity_chatml.rs  probe_wmma.rs  test_qwen35_load.rs
crates/hipfire-runtime/src/: hfq.rs  lib.rs  llama.rs  multi_gpu.rs  prompt_frame.rs  tokenizer.rs  weight_pager.rs
docs/: BENCHMARKS.md  CLI.md  DFLASH_ARCHITECTURE.md  DFLASH_PROGRESS.md  PERF_COMPARISON.md  PLAN-0.1.3.md
docs/methodology/: perf-benchmarking.md
docs/plans/: 8x-cluster-launch.md  cdna-calibration-optimization.prd  ddtree-path-b-decouple-rope-from-kvslot.prd  eval_hipfire_speedup.md  humaneval-2026-04-24-beats-3090.prd  issue-113-quant-quality-eval.md  oversize-files-modularization.md  prompt-shape-adaptation.prd  size-limit-ci-gates.md  task-93-path-c-trained-draft.prd  task-93-path-d-stale-context.prd
kernels/src/: attention_flash_q8_0_reduce.hip  embedding_hfq4g256_batched.hip  (+41 more)
scripts/: coherence-gate.sh  compile-kernels.sh  dflash_train_poc.py  fetch_calibration_corpus.sh  force-update.ps1  install.ps1  install.sh  pflash-gate.sh  pflash-niah-bench.sh  pp-gate.sh  quality-gate.sh  rebase-onto-modular.sh  speed-gate.sh  verify-bind-thread.sh
tests/: e2e_bump_reload.sh  e2e_kv_budget.sh  e2e_kv_reject.sh
(+153 files in other folders)
